edit map and charts layout

--- a/app/views/papuas/_maps.html.erb
+++ b/app/views/papuas/_maps.html.erb
@@ -1,4 +1,7 @@
 <style>
+  .map {
+    z-index: -1;
+  }
 	.legend {
 		background-color: #fff;
 		border-radius: 3px;
@@ -8,7 +11,7 @@
 		padding: 10px;
 		position: absolute;
 		right: 100px;
-		z-index: 1;
+		z-index: -1;
 	}
 	 
 	.legend h4 {
