--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -48,22 +48,12 @@
     <%= render 'maps' %>
   </div>
 
-  <div id="state-legend" class="legend">
-    <h4>Results</h4>
-    <div><span style="background-color: #fbb03b" class="circle"></span>PNG</div>
-    <div><span style="background-color: #e55e5e" class="circle"></span>IND</div>
-    <div><span style="background-color: #223b53" class="circle"></span>Solomon Islands</div>
-    <h4 style="margin-top: 14px ">The Rest</h4>
-    <div><span><img class="img" src="/school-JP_PNG.svg"></img></span>PNG</div>
-    <div><span><img class="img" src="/school-JP_IND.svg"></img></span>IND</div>
-    <div><span><img class="img" src="/school-JP_Solo.svg"></img></span>Solomon Islands</div>
-  </div>
 
-  <!--div class="charts py-5 flex items-center justify-between float-none" id="charts"-->
+  <div class="charts py-5 flex items-center justify-between float-none" id="charts">
     
     <%= render 'charts' %>
 
-  <!--/div-->
+  </div>
 
   <!--div class="py-3" id='map' style='width: 1000px; height: 600px;'></div-->
   <%#= text_field_tag :search_inc, params[:search_inc] %>
