--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,3 +1,9 @@
+<style>
+  nav {
+    z-index: 1000;
+  }
+</style>
+
 <nav class="bg-gray-800 w-full fixed">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
