--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<!--p id="notice"><%= notice %></p-->
+<%#= render "shared/flash_notice" %>
 
 <h1 class="py-2 text-3xl text-gary-900 font-bold">Segments</h1>
 
