--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -85,7 +85,19 @@
   </div>
 </nav>
 
+<!-- <script>
+  // Add active class to the current button (highlight it)
+  var header = document.getElementById("nav-bar");
+  var btns = header.getElementsByClassName("nav-btn");
 
+  for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function() {
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+    this.className += " active";
+    });
+  }
+</script> -->
 
 
   <!--nav class="bg-gray-800">
