--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,17 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
+<div id="error_explanation">
+  <div class="bg-red-500 px-2 py-4 mx-auto font-sans font-medium text-center text-white">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
+       count: resource.errors.count,
+       resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
-    <ul>
+     </h2>
+     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <li class=""><%= message %></li>
       <% end %>
     </ul>
   </div>
+</div>
 <% end %>
