--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -1,7 +1,11 @@
 <!--p id="notice"><%= notice %></p-->
 <%#= render "shared/flash_notice" %>
 
-<h1 class="py-2 text-3xl text-gary-900 font-bold">Segments</h1>
+<div class="flex items-center">
+  <h1 class="py-2 text-3xl text-gary-900 font-bold">Segments</h1>
+
+  <button id="segReset" onclick="performReset()" class="ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</button>
+</div>
 
 <div class="align-middle inline-block min-w-full" id="segments_table">
   <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
@@ -97,6 +101,7 @@
     filters.col4 = val;
     applyFilters();
   });
+
   function applyFilters() {
     $rows.show();
     $rows.filter(function() {
@@ -116,5 +121,13 @@
       return !~text.indexOf(filters.col4);
     }).hide();
   };
+
+  function performReset() {
+    document.getElementById("search1").value = "";
+    document.getElementById("search2").value = "";
+    document.getElementById("search3").value = "";
+    document.getElementById("search4").value = "";
+    $rows.show();
+  }
 
 </script>
