format papuas edit and show page

--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -122,6 +122,8 @@
     }).hide();
   };
 
+
+  // resource: https://stackoverflow.com/questions/53357650/filtering-table-columns-based-on-multiple-input-fields
   function performReset() {
     document.getElementById("search1").value = "";
     document.getElementById("search2").value = "";
