--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -11,7 +11,77 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="hidden sm:block" aria-hidden="true">
+    <div class="py-5">
+      <div class="border-t border-gray-200"></div>
+    </div>
+  </div>
+
+  <div class="mt-5 md:mt-0 md:col-span-2">
+      <form action="#" method="POST">
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <div class="px-4 py-5 bg-white sm:p-6">
+            <div class="grid grid-cols-6 gap-6">
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :language_name, "Language", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :language_name, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :language_family, "Language Family", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :language_family, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :iso, "ISO", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :iso, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :country, "Country", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :country, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :latitude, "Latitude", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :latitude, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-3">
+                <%= form.label :longitude, "Longitude", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :longitude, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+                <%= form.label :inv, "Inventory", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :inv, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+                <%= form.label :consonants, "Consonant", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :consonants, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+                <%= form.label :vowels, "Vowel", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :vowels, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+
+              <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+                <%= form.label :diphthongs, "Diphthong", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :diphthongs, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+              </div>
+            </div>
+          </div>
+          <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+            <%= link_to 'Back', papuas_path, class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+              <%= form.submit class: "btn inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %>
+          </div>
+        </div>
+      </form>
+    </div>
+
+  <!--div class="field">
     <%= form.label :language %>
     <%= form.text_field :language %>
   </div>
@@ -48,5 +118,5 @@
 
   <div class="actions">
     <%= form.submit %>
-  </div>
+  </div-->
 <% end %>
