--- a/app/views/papuas/edit.html.erb
+++ b/app/views/papuas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Papua</h1>
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing Product</h1>
 
 <%= render 'form', papua: @papua %>
 
-<%= link_to 'Show', @papua %> |
-<%= link_to 'Back', papuas_path %>
+<!--%= link_to 'Show', @papua %> |
+<%#= link_to 'Back', papuas_path %-->
