--- a/app/views/papuas/show.html.erb
+++ b/app/views/papuas/show.html.erb
@@ -1,63 +1,136 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Language:</strong>
-  <%= @papua.language_name %>
-</p>
+<div class="bg-white shadow overflow-hidden sm:rounded-lg mt-5">
+  
+  <div class="lg:flex lg:items-center lg:justify-between">
+    <div class="flex-1 min-w-0 px-4 py-5 sm:px-6">
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+         Language Information
+      </h3>
+    </div>
+    <div class="mt-5 flex lg:mt-0 lg:ml-4">
+      <% if current_user.admin? %>
+        <a href="<%= edit_papua_path(@papua) %>">
+          <span class="hidden sm:block">
+            <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <!-- Heroicon name: solid/pencil -->
+            <svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+            </svg>
+            Edit
+            <%#= link_to 'Edit', edit_product_path(@product) %>
+            </button>  
+          </span>
+        </a>
+      <% end %>  
+      
 
-<p>
-  <strong>Language family:</strong>
-  <%= @papua.language_family %>
-</p>
+      <span class="hidden sm:block ml-3 mr-3">
+        <%= link_to 'Back', papuas_path, class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      </span>
+      
+    </div>
+  </div>
 
-<p>
-  <strong>ISO:</strong>
-  <span class="px-4 inline-flex text-sm leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">
-    <a href="https://iso639-3.sil.org/code/<%= @papua.iso.to_s %>" target="_blank" class="text-blue-600"><%= @papua.iso %></a>
-  </span>
-</p>
+  <div class="border-t border-gray-200">
+    <dl>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Language
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.language_name %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Country:</strong>
-  <%= @papua.country %>
-</p>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Language family
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.language_family %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Latitude:</strong>
-  <%= @papua.latitude %>
-</p>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          ISO
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <span class="px-4 inline-flex text-sm leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">
+            <a href="https://iso639-3.sil.org/code/<%= @papua.iso.to_s %>" target="_blank" class="text-blue-600"><%= @papua.iso %></a>
+          </span>
+        </dd>
+      </div>
 
-<p>
-  <strong>Longitude:</strong>
-  <%= @papua.longitude %>
-</p>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Country
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.country %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Inventories(<%= @papua.inv.split(",").size %>):</strong>
-  <%= @papua.inv %>
-</p>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Latitude
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.latitude %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Consonants(<%= @papua.consonants.split(",").size %>):</strong>
-  <% @seg_no.each do |k,v| %>
-    <span class="px-4 inline-flex text-sm leading-5 font-semibold rounded-full bg-green-100 text-green-800">
-      <a href="/segments/<%= v.to_s %>" target="_blank" class=""><%= "#{k}" %></a>
-    </span>
-  <% end %>
-</p>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Longitude
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.longitude %>
+        </dd>
+      </div>
 
-<p>
-  <strong>Vowels(<%= @papua.vowels.split(",").size %>):</strong>
-  <%= @papua.vowels %>
-</p>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Inventories(<%= @papua.inv.split(",").size %>)
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.inv %>
+        </dd>
+      </div>
 
-<% if @papua.diphthongs.size > 0 %>
-  <p>
-    <strong>Diphthongs(<%= @papua.diphthongs.split(",").size %>):</strong>
-    <%= @papua.diphthongs %>
-  </p>
-<% end %>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Consonants(<%= @papua.consonants.split(",").size %>)
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <% @seg_no.each do |k,v| %>
+            <span class="px-4 inline-flex text-sm leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+              <a href="/segments/<%= v.to_s %>" target="_blank" class=""><%= "#{k}" %></a>
+            </span>
+          <% end %>
+        </dd>
+      </div>
 
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Vowels(<%= @papua.vowels.split(",").size %>)
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.vowels %>
+        </dd>
+      </div>
 
-<%= link_to 'Edit', edit_papua_path(@papua) %> |
-<%= link_to 'Back', papuas_path %>
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">
+          Diphthongs(<%= @papua.diphthongs.split(",").size %>)
+        </dt>
+        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+          <%= @papua.diphthongs %>
+        </dd>
+      </div>
+
+      
+    </dl>
+  </div>
+</div>
