fix papua update function

--- a/app/views/papuas/edit.html.erb
+++ b/app/views/papuas/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing Product</h1>
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing Languages</h1>
 
 <%= render 'form', papua: @papua %>
 
