--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -9,6 +9,7 @@
 	  	<li>Format language's edit and show page.</li>
 	  	<li>Coloured all current languages in red.</li>
 	  	<li>Changed map legend.</li>
+	  	<li>Fixed update function.</li>
 		</ul>
 	</div>
 
