fix edit and update function

--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -71,6 +71,16 @@
           <%= form.label :diphthongs, "Diphthong", class: "block text-sm font-medium text-gray-700" %>
           <%= form.text_field :diphthongs, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
         </div>
+
+        <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+          <%= form.label :source, "Bibliography Source", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :source, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+
+        <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+          <%= form.label :notes, "Notes", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_area :notes, rows: 4, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
       </div>
     </div>
     <div class="actions px-4 py-3 bg-gray-50 text-right sm:px-6">
