--- a/app/views/papuas/edit.html.erb
+++ b/app/views/papuas/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing Languages</h1>
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing <span class="px-1 py-2 inline-flex leading-5 font-semibold rounded-md bg-gray-200 text-gray-800">NO.<%= @papua.no %></span> Language</h1>
 
 <%= render 'form', papua: @papua %>
 
