--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -37,6 +37,7 @@
           <%= papua.longitude %>
         </td-->
         <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
+          <%# papua.inv = papua.consonants + ", " + papua.vowels%>
           <%= papua.inv %>
         </td>
         <td class="px-3 py-4 whitespace-normal text-sm text-gray-500">
