--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,15 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
-	<div class="update">
+	<div class="update my-5">
+		<p class="my-2">New in (October 16th, 2021):</p>
+		<ul class="list-inside list-disc">
+	  	<li>New feature: Bibliography Source and Notes fields of each language.</li>
+	  	<br>
+	  	<li>Fixed Edit and Update function.</li>
+	  	
+		</ul>
+	</div>
+	<div class="update my-5">
 		<p class="my-2">New in (October 15th, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New page: What's New page.</li>
@@ -9,7 +18,6 @@
 	  	<li>Format language's edit and show page.</li>
 	  	<li>Coloured all current languages in red.</li>
 	  	<li>Changed map legend.</li>
-	  	<li>Fixed update function.</li>
 		</ul>
 	</div>
 
