--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,14 @@
-<div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5">
+<div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
-	<div class="update my-5">
+	<div class="update my-10">
+		<p class="my-2">New in (October 18th, 2021):</p>
+		<ul class="list-inside list-disc">
+	  	<li>Moved all ~ of vowels on top.</li>
+	  	<li>Changed all /<sup>n</sup>a/ to /ã/, etc.</li>
+	  	<li>Changed font to apply a web safe monospaced font family, so /ɑ/ will not looks like alpha.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 16th, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New feature: Bibliography Source and Notes fields of each language.</li>
@@ -9,7 +17,7 @@
 	  	
 		</ul>
 	</div>
-	<div class="update my-5">
+	<div class="update my-10">
 		<p class="my-2">New in (October 15th, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New page: What's New page.</li>
