update sounds and change font to mono

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
     <%#= render "shared/nav" %>
   </div-->
   <!-- ** render must use # to comments out, original one -->
-  <body>
+  <body class="font-mono">
     <!-- <div class="fixed w-full"-->
       <%= render "shared/nav" %>
       <div class="pt-16">
