--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,10 +1,19 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (October 20th, 2021):</p>
+		<ul class="list-inside list-disc">
+	  	<li>Changed /ᵑɈ/ to /ᶮɟ/: Abun and Savosavo.</li>
+	  	<li>Changed /ⁿɟ/ to /ᶮɟ/: Kimaghima and Apali.</li>
+	  	<li>Changed /ⁿɡb/ to /ᵑɡb/: Nen.</li>
+	  	<li>Fixed language name edit function.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (October 18th, 2021):</p>
 		<ul class="list-inside list-disc">
-	  	<li>Moved all ~ of vowels on top.</li>
-	  	<li>Changed all /<sup>n</sup>a/ to /ã/, etc.</li>
+	  	<li>Moved all ~ of vowels on top: Edolo, Huli, Odoodee, Binandere, Korafe-Yegha, Munit, Gobasi.</li>
+	  	<li>Changed all /<sup>n</sup>a/ to /ã/: Wutung.</li>
 	  	<li>Changed font to apply a web safe monospaced font family, so /ɑ/ will not looks like alpha.</li>
 		</ul>
 	</div>
@@ -12,7 +21,6 @@
 		<p class="my-2">New in (October 16th, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New feature: Bibliography Source and Notes fields of each language.</li>
-	  	<br>
 	  	<li>Fixed Edit and Update function.</li>
 	  	
 		</ul>
@@ -22,7 +30,6 @@
 		<ul class="list-inside list-disc">
 	  	<li>New page: What's New page.</li>
 	  	<li>New feature: Edit and Update language's details.</li>
-	  	<br>
 	  	<li>Format language's edit and show page.</li>
 	  	<li>Coloured all current languages in red.</li>
 	  	<li>Changed map legend.</li>
