--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -70,7 +70,7 @@
   <div class="align-middle inline-block min-w-full" id="papuas_table">
   <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       
-    <table id="myTable" class="min-w-full divide-y divide-gray-200 font-mono">
+    <table id="myTable" class="min-w-full divide-y divide-gray-200">
     <thead class="bg-gray-50 divide-y divide-gray-200">
         <tr class="h-12">
             <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
