--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -73,7 +73,8 @@
     <table id="myTable" class="min-w-full divide-y divide-gray-200">
     <thead class="bg-gray-50 divide-y divide-gray-200">
         <tr class="h-12">
-            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <th scope="col" style="cursor:pointer" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <%#= sortable "no" %>
               No
             </th>
 
@@ -246,6 +247,42 @@
   </div-->
 
 <script>
+  function sortTable(n) {
+        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+        table = document.getElementById("myTable");
+        switching = true;
+        dir = "asc";
+        while(switching){
+            switching = false;
+            rows = table.getElementsByTagName("TR");
+            for(i=1; i<(rows.length - 1);i++){
+                shouldSwitch = false;
+                x = rows[i].getElementsByTagName("TD")[n];
+                y = rows[i+1].getElementsByTagName("TD")[n];
+                if(dir == "asc"){
+                    if(x.innerHTML.toLowerCase() >  y.innerHTML.toLowerCase()){
+                        shouldSwitch = true;
+                        break;
+                    }  
+                }else if (dir == "desc"){
+                    if(x.innerHTML.toLowerCase() <  y.innerHTML.toLowerCase()){
+                        shouldSwitch = true;
+                        break;
+                    }  
+                }
+            }
+            if(shouldSwitch){
+                rows[i].parentNode.insertBefore(rows[i+1], rows[i]);
+                switching = true;
+                switchcount++;
+            }else{
+                if(switchcount == 0 && dir == "asc"){
+                    dir = "desc";
+                    switching = true;
+                }
+            }
+        }
+    }
     /*
     function myFunction(n) {
       var input, filter, table, tr, td, i, txtValue;
