split result and rest tables

--- a/app/views/papuas/_papuas_rest.html.erb
+++ b/app/views/papuas/_papuas_rest.html.erb
@@ -1,7 +1,7 @@
-<div class="align-middle inline-block min-w-full" id="papuas_table">
+<div class="align-middle inline-block min-w-full" id="rest_table">
   <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       
-    <table id="myTable1" class="min-w-full divide-y divide-gray-200">
+    <table id="myTable2" class="min-w-full divide-y divide-gray-200">
     <thead class="bg-gray-50 divide-y divide-gray-200">
         <tr class="h-12">
             <th scope="col" class="hover:bg-gray-100 cursor-pointer px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -111,7 +111,7 @@
             </th>
         </tr>
     </thead>
-    <tbody class="bg-white divide-y divide-gray-200">
+    <tbody class="bg-blue-50 divide-y divide-gray-200">
       <% papuas.each do |papua| %>
         <tr onclick="window.location.href='/papuas/<%= papua.id.to_s %>'" style="cursor:pointer">
         <td class="px-4 py-4 whitespace-normal">
