--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -4,6 +4,7 @@
 		<p class="my-2">New in (October 21st, 2021):</p>
 		<ul class="list-inside list-disc">
 	  	<li>New feature: Text columns are sortable alphabetically, numberic columns are sortable in ascending and descending order.</li>
+	  	<li>Splited result and the rest into two seperate sortable tables.</li>
 		</ul>
 	</div>
 	<div class="update my-10">
