--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -66,22 +66,30 @@
     <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
   </div>
 
-  
-  <div class="align-middle inline-block min-w-full" id="papuas_table">
+<!-- result table   -->
+<%= render 'papuas', papuas: @papuas %>
+
+<div class="text-center px-4 py-6 text-lg text-gray-700 font-medium">
+  The rest 
+  <span class="font-semibold text-blue-700 text-2xl"> <%= @papuas_other.size %> </span>
+  languages
+</div>
+
+<%= render 'papuas_rest', papuas: @papuas_other %>
+
+<!-- <div class="align-middle inline-block min-w-full" id="rest_table">
   <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       
-    <table id="myTable" class="min-w-full divide-y divide-gray-200">
+    <table id="myTable2" class="min-w-full divide-y divide-gray-200">
     <thead class="bg-gray-50 divide-y divide-gray-200">
         <tr class="h-12">
-            <th scope="col" style="cursor:pointer" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <%#= sortable "no" %>
               No
             </th>
 
             <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <p>Language</p>
-              <%#= text_field_tag :search_inc, params[:search_inc] %>
-              <!--input type="text" id="search_c" name="search_c" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md"-->
             </th>
 
             <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -96,31 +104,20 @@
               Country
             </th>
 
-            <!--th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Latitude
-            </th>
-
-            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              longitude
-            </th-->
-
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               Inventory
             </th>
 
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <p>C</p>
-              <!--input type="text" id="search_c" name="search_c" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
             </th>
 
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <p>V</p>
-              <!--input type="text" id="search_v" name="search_v" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
             </th>
 
             <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <p>Total</p>
-              <!--input type="text" id="search_cv" name="search_cv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
             </th>
         </tr>
         <tr>
@@ -143,14 +140,6 @@
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <input type="text" id="search_country" name="search_country" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-20">
             </th>
-
-            <!--th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              Latitude
-            </th>
-
-            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              longitude
-            </th-->
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               <input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80">
@@ -202,14 +191,14 @@
             </th>
         </tr>
     </thead>
-    <tbody class="bg-white divide-y divide-gray-200">
-      <%= render 'papuas' %>
+    <tbody class="bg-blue-50 divide-y divide-gray-200">
+      <%#= render 'papuas', papuas: @papuas_other %>
     </tbody>
     
     </table>
     </div>
   </div>
-</div>
+</div> -->
  
 
   <!--div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
